--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 
 <head>
+  <title>TechDocs</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style src="./data/css/style.css"></style>
 </head>
 
 <body>
-  <style src="./data/css/style.css"></style>
+  
 </body>
 
 <footer>
