--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>TechDocs</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style src="./data/css/style.css"></style>
+  <link rel="stylesheet" href="/data/css/style.css"
 </head>
 
 <body>
