--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@ body {
   <div class="footer">
     <h2>Footer</h2>
   </div>
+  
+  <script src="/data/js/index.js">
+  </script>
+  
 </body>
 
 </html>
