--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@ body {
     <h2>Footer</h2>
   </div>
   
-  <script src="/data/js/index.js">
-  </script>
+  <button type="button" onclick="myFunction()">Try it</button>
+  
+  <script src="/data/js/index.js"></script>
   
 </body>
 
