--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@ body {
 }
     
   </style>
-  
+  <nav>
+    <a href="/index.html/">Home</a> |
+    <a href="/docs.html/">Docs</a> |
+    <a href="/wiki.html">Wiki</a>
+  </nav>
 </head>
 
 <body>
@@ -111,10 +115,10 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="link0">Link</a>
+  <a href="link1">Link</a>
+  <a href="link2">Link</a>
+  <a href="link3">Link</a>
 </div>
 
 <!-- The flexible grid (content) -->
