--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <a href="link0">Link</a>
-  <a href="link1">Link</a>
-  <a href="link2">Link</a>
-  <a href="link3">Link</a>
+  <button type="button" onclick="myFunction()"><a>Home</a></button> |
+  <a href="/docs.html/">Docs</a> |
+  <a href="/wiki.html/">Wiki</a> |
+  <a href="/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
