--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@ body {
 }
     
   </style>
-  <nav>
-    <a href="/index.html/">Home</a> |
-    <a href="/docs.html/">Docs</a> |
-    <a href="/wiki.html">Wiki</a>
-  </nav>
+  <div class="navbar">
+    <nav>
+      <a href="/index.html/">Home</a> |
+      <a href="/docs.html/">Docs</a> |
+      <a href="/wiki.html">Wiki</a>
+    </nav>
+  </div>
 </head>
 
 <body>
