--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ body {
   </style>
   <div class="navbar">
     <nav>
-      <a href="/index.html/">Home</a> |
-      <a href="/docs.html/">Docs</a> |
-      <a href="/wiki.html">Wiki</a>
+      <a href="docs/index.html/">Home</a> |
+      <a href="docs/docs.html/">Docs</a> |
+      <a href="docs/wiki.html">Wiki</a>
     </nav>
   </div>
 </head>
@@ -117,10 +117,10 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <button type="button" onclick="myFunction()"><a>Home</a></button> |
-  <a href="/docs.html/">Docs</a> |
-  <a href="/wiki.html/">Wiki</a> |
-  <a href="/about.html/">About us</a>
+  <button type="button" onclick="myFunction()"><a href="docs/index.html/">Home</a></button> |
+  <a href="docs/docs.html/">Docs</a> |
+  <a href="docs/wiki.html/">Wiki</a> |
+  <a href="docs/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
