--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body {
   <div class="navbar">
     <nav>
       <a href="docs/index.html/">Home</a> |
-      <a href="docs/docs.html/">Docs</a> |
-      <a href="docs/wiki.html">Wiki</a>
+      <a href="docs/template/docs.html/">Docs</a> |
+      <a href="docs/template/wiki.html">Wiki</a>
     </nav>
   </div>
 </head>
@@ -117,10 +117,11 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <button type="button" onclick="myFunction()"><a href="docs/index.html/">Home</a></button> |
-  <a href="docs/docs.html/">Docs</a> |
-  <a href="docs/wiki.html/">Wiki</a> |
-  <a href="docs/about.html/">About us</a>
+  <button type="button" onclick="myFunction()">Home</button> |
+  <a href="docs/template/docs.html/">Docs</a> |
+  <a href="docs/template/wiki.html/">Wiki</a> |
+  <a href="docs/template/style.html/">Style</a> |
+  <a href="docs/template/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
