--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
   </style>
   <div class="navbar">
     <nav>
-      <a href="docs/index.html/">Home</a> |
+      <a href="/index.html/">Home</a> |
       <a href="docs/template/docs.html/">Docs</a> |
       <a href="docs/template/wiki.html">Wiki</a>
     </nav>
