--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <button type="button" onclick="myFunction()">Home</button> |
+  <button type="button" onclick="myFunction()"><a>Home</a></button> |
   <a href="docs/template/docs.html/">Docs</a> |
   <a href="docs/template/wiki.html/">Wiki</a> |
   <a href="docs/template/style.html/">Style</a> |
