--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ body {
   </style>
   <div class="navbar">
     <nav>
-      <a href="/index.html/">Home</a> |
-      <a href="docs/template/docs.html/">Docs</a> |
-      <a href="docs/template/wiki.html">Wiki</a>
+      <a href="./index.html/">Home</a> |
+      <a href="./template/docs.html/">Docs</a> |
+      <a href="./template/wiki.html">Wiki</a>
     </nav>
   </div>
 </head>
@@ -118,10 +118,10 @@ body {
 <!-- Navigation Bar -->
 <div class="navbar">
   <button type="button" onclick="myFunction()"><a>Home</a></button> |
-  <a href="docs/template/docs.html/">Docs</a> |
-  <a href="docs/template/wiki.html/">Wiki</a> |
-  <a href="docs/template/style.html/">Style</a> |
-  <a href="docs/template/about.html/">About us</a>
+  <a href="./template/docs.html/">Docs</a> |
+  <a href="./template/wiki.html/">Wiki</a> |
+  <a href="./template/style.html/">Style</a> |
+  <a href="./template/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
