--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
   </style>
   <div class="navbar">
     <nav>
-      <a href="./index.html/">Home</a> |
+      <a href="./">Home</a> |
       <a href="./template/docs.html/">Docs</a> |
       <a href="./template/wiki.html">Wiki</a>
     </nav>
@@ -119,7 +119,7 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <button type="button" onclick="myFunction()"><a>Home</a></button> |
+  <button type="button" onclick="myFunction()"><a href="./">Home</a></button> |
   <a href="./template/docs.html/">Docs</a> |
   <a href="./template/wiki.html/">Wiki</a> |
   <a href="./template/style.html/">Style</a> |
