--- a/index.html
+++ b/index.html
@@ -116,13 +116,14 @@ body {
 </div>
 
 <script src="/data/js/index.js"></script>  
-
+<script src="/data/js/style.js"></script>  
+  
 <!-- Navigation Bar -->
 <div class="navbar">
-  <button type="button" onclick="myFunction()"><a href="./">Home</a></button> |
+  <button type="button" onclick="myIndexFunction()"><a href="./">Home</a></button> |
   <a href="./template/docs.html/">Docs</a> |
   <a href="./template/wiki.html/">Wiki</a> |
-  <a href="./template/style.html/">Style</a> |
+  <button type="button" onclick="myStyleFunction()"><a href="./template/style.html">Style</a></button> |
   <a href="./template/about.html/">About us</a>
 </div>
 
