--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@ body {
   <div class="navbar">
     <nav>
       <a href="./">Home</a> |
-      <a href="./template/docs.html/">Docs</a> |
-      <a href="./template/wiki.html">Wiki</a>
+      <a href="./templates/style.html"> |
+      <a href="./templates/docs.html/">Docs</a> |
+      <a href="./templates/wiki.html">Wiki</a> |
+      <a href="./templates/about.html">About us</a>
     </nav>
   </div>
 </head>
@@ -121,10 +123,11 @@ body {
 <!-- Navigation Bar -->
 <div class="navbar">
   <button type="button" onclick="myIndexFunction()"><a href="./">Home</a></button> |
-  <a href="./template/docs.html/">Docs</a> |
-  <a href="./template/wiki.html/">Wiki</a> |
-  <button type="button" onclick="myStyleFunction()"><a href="./template/style.html">Style</a></button> |
-  <a href="./template/about.html/">About us</a>
+  <a href="./templates/docs.html/">Docs</a> |
+  <a href="./templates/wiki.html/">Wiki</a> |
+  <a href="./templates/style.html">Style</a> |
+  <button type="button" onclick="myStyleFunction()">StyleButton</button> |
+  <a href="./templates/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
