--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
 
 <body>
   <!-- Note -->
-<div style="background:yellow;padding:5px">
+<div class="header" style="padding:5px">
   <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
 </div>
 
