--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
 <!-- Navigation Bar -->
 <div class="navbar">
   <a href="./">Home</a> |
-  <a href="./templates/docs.html/">Docs</a> |
-  <a href="./templates/wiki.html/">Wiki</a> |
-  <a href="./templates/style.html">Style</a> |
-  <a href="./templates/about.html/">About us</a>
+  <div class="navbar-right">
+    <a href="./templates/docs.html/">Docs</a> |
+    <a href="./templates/wiki.html/">Wiki</a> |
+    <a href="./templates/style.html">Style</a> |
+    <a href="./templates/about.html/">About us</a>
+  </div>
 </div>
   
 <!-- Header -->
