--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>TechDocs</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://andyw4ndgerannt.github.io/docs/">
+  <base target="_blank">
+  <base target="_top" href="https://andyw4ndgerannt.github.io/docs/">
   
   <style>
   * {
