--- a/index.html
+++ b/index.html
@@ -124,6 +124,27 @@
   .topnav-right {
     float: right;
   }
+  
+  .vertical-menu {
+  width: 200px;
+  }
+
+  .vertical-menu a {
+    background-color: #eee;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+  }
+
+  .vertical-menu a:hover {
+    background-color: #ccc;
+  }
+
+  .vertical-menu a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
   </style>
 </head>
   
