--- a/index.html
+++ b/index.html
@@ -137,14 +137,12 @@
   
 <!-- Navigation Bar -->
 <div class="topnav">
-  <li>
-    <li><a href="./">Home</a></li> 
-    <li><a href="./templates/wiki.html/">Wiki</a></li>
-    <div class="topnav-right">
-      <li><a href="./templates/docs.html/">Docs</a><li> 
-      <li><a href="./templates/style.html">Style</a><li> 
-      <li><a href="./templates/about.html/">About us</a><li>
-    </li>
+  <a href="./">Home</a>
+  <a href="./templates/wiki.html/">Wiki</a>
+  <div class="topnav-right">
+    <a href="./templates/docs.html/">Docs</a>
+    <a href="./templates/style.html">Style</a>
+    <a href="./templates/about.html/">About us</a>
   </div>
 </div>
   
