--- a/index.html
+++ b/index.html
@@ -125,7 +125,57 @@
     float: right;
   }
   
+  .sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+  
   </style>
+  
+<div class="topnav">
+  <a href="./">Home</a>
+  <a href="./templates/wiki.html/">Wiki</a>
+  <div class="topnav-right">
+    <a href="./templates/docs.html/">Docs</a>
+    <a href="./templates/style.html">Style</a>
+    <a href="./templates/about.html/">About us</a>
+  </div>
+</div>
+  
 </head>
   
 <body>
@@ -135,15 +185,13 @@
   <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
 </div>
   
-<!-- Navigation Bar -->
-<div class="topnav">
-  <a href="./">Home</a>
-  <a href="./templates/wiki.html/">Wiki</a>
-  <div class="topnav-right">
-    <a href="./templates/docs.html/">Docs</a>
-    <a href="./templates/style.html">Style</a>
-    <a href="./templates/about.html/">About us</a>
-  </div>
+<!-- Side Navigation Bar -->
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
 </div>
   
 <!-- Header -->
