--- a/index.html
+++ b/index.html
@@ -233,5 +233,14 @@
     <h2>Footer</h2>
   </div>
   
+<script>
+  function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
 </body>
 </html>
