--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="https://andyw4ndgerannt.github.io/docs/">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <style>
     
@@ -167,7 +168,7 @@
   </style>
   
 <div class="topnav">
-  <a href="./">Home</a>
+  <a href="./"><i class="fa fa-fw fa-home">Home</a>
   <a href="./templates/wiki.html/">Wiki</a>
   <div class="topnav-right">
     <a href="./templates/docs.html/">Docs</a>
