--- a/index.html
+++ b/index.html
@@ -166,15 +166,14 @@
 }
   
   </style>
-  
-<div class="topnav">
-  <a href="./"><i class="fa fa-fw fa-home">Home</a>
-  <a href="./templates/wiki.html/">Wiki</a>
-  <div class="topnav-right">
-    <a href="./templates/docs.html/">Docs</a>
-    <a href="./templates/style.html">Style</a>
-    <a href="./templates/about.html/">About us</a>
-  </div>
+
+<!-- Side Navigation Bar -->
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
 </div>
   
 </head>
@@ -192,13 +191,15 @@
   <p>With a <b>flexible</b> layout.</p>
 </div> 
 
-<!-- Side Navigation Bar -->
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+<!-- Body Navigation Bar -->
+<div class="topnav">
+  <a href="./"><i class="fa fa-fw fa-home">Home</a>
+  <a href="./templates/wiki.html/">Wiki</a>
+  <div class="topnav-right">
+    <a href="./templates/docs.html/">Docs</a>
+    <a href="./templates/style.html">Style</a>
+    <a href="./templates/about.html/">About us</a>
+  </div>
 </div>
   
 <!-- The flexible grid (content) -->
