--- a/index.html
+++ b/index.html
@@ -180,11 +180,6 @@
   
 <body>
   
-  <!-- Note -->
-<div class="header" style="padding:5px">
-  <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
-</div>
-  
 <!-- Header -->
 <div class="header">
   <h1>My Website</h1>
@@ -193,7 +188,7 @@
 
 <!-- Body Navigation Bar -->
 <div class="topnav">
-  <a href="./"><i class="fa fa-fw fa-home">Home</a>
+  <a href="./"><i class="fa fa-fw fa-home"></a>
   <a href="./templates/wiki.html/">Wiki</a>
   <div class="topnav-right">
     <a href="./templates/docs.html/">Docs</a>
