--- a/index.html
+++ b/index.html
@@ -167,13 +167,15 @@
   
   </style>
 
-<!-- Side Navigation Bar -->
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+<!-- Base Navigation Bar -->
+<div class="topnav">
+  <a href="./"><i class="fa fa-fw fa-home"></a>
+  <a href="./templates/wiki.html/">Wiki</a>
+  <div class="topnav-right">
+    <a href="./templates/docs.html/">Docs</a>
+    <a href="./templates/style.html">Style</a>
+    <a href="./templates/about.html/">About us</a>
+  </div>
 </div>
   
 </head>
@@ -186,15 +188,13 @@
   <p>With a <b>flexible</b> layout.</p>
 </div> 
 
-<!-- Body Navigation Bar -->
-<div class="topnav">
-  <a href="./"><i class="fa fa-fw fa-home"></a>
-  <a href="./templates/wiki.html/">Wiki</a>
-  <div class="topnav-right">
-    <a href="./templates/docs.html/">Docs</a>
-    <a href="./templates/style.html">Style</a>
-    <a href="./templates/about.html/">About us</a>
-  </div>
+<!-- Side Navigation Bar -->
+<div class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
 </div>
   
 <!-- The flexible grid (content) -->
