--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 </div> 
 
 <!-- Side Navigation Bar -->
-<div class="sidenav">
+<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">About</a>
   <a href="#">Services</a>
