--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
-  
+
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="side">
