--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 <!-- Base Navigation Bar -->
 <div class="topnav">
   <a href="./"><i class="fa fa-fw fa-home"></a>
-  <a href="./templates/wiki.html/">Wiki</a>
+  <a href="./templates/base.html/">Wiki</a>
   <div class="topnav-right">
-    <a href="./templates/docs.html/">Docs</a>
+    <a href="./templates/base.html/">Docs</a>
     <a href="./templates/style.html">Style</a>
-    <a href="./templates/about.html/">About us</a>
+    <a href="./templates/base.html/">About us</a>
   </div>
 </div>
 
