--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+<div id="main">
+  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>
+</div>
   
 </head>
   
@@ -226,10 +228,12 @@
 <script>
   function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
 }
 
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft = "0";
 }
 </script>
   
