--- a/index.html
+++ b/index.html
@@ -186,7 +186,19 @@
   <div class="footer">
     <h2>Footer</h2>
   </div>
-  
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+
 </body>
 </html>
 
