--- a/index.html
+++ b/index.html
@@ -8,21 +8,48 @@
   <base href="https://andyw4ndgerannt.github.io/docs/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-  * {
-  box-sizing: border-box;
-  }
-  /* Style the body */
-  body {
-    font-family: Arial;
-    margin: 0;
-  }
-  /* Header/logo Title */
-  .header {
-    padding: 60px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-  }
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
   /* Style the top navigation bar */
   .navbar {
     display: flex;
@@ -130,9 +157,14 @@
   
 <body>
   
-  <!-- Note -->
-<div class="header" style="padding:5px">
-  <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
+<!-- Header --> 
+<div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
 </div>
   
 <!-- Navigation Bar -->
@@ -145,13 +177,10 @@
   <a href="./templates/about.html/">About us</a>
 </div>
 <div id="main">
-  <h2>My Webside</h2>
-  <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </div>
 
   
-<!-- Header -->
 
 
 <!-- The flexible grid (content) -->
