--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>TechDocs</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="https://andyw4ndgerannt.github.io/docs/">
@@ -171,7 +172,7 @@ body {
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="./">Home</a> |
-  <a href="./templates/docs.html/">Docs</a> |
+  <a href="./templates/team.html/">Team</a> |
   <a href="./templates/wiki.html/">Wiki</a> |
   <a href="./templates/style.html">Style</a> |
   <a href="./templates/about.html/">About us</a>
