--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@ body {
     width: 100%;
     padding: 20px;
   }
+  /* Card Image */
+  .cardimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+  }
   /* Footer */
   .footer {
     padding: 20px;
@@ -221,16 +227,20 @@ button:hover, a:hover {
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
+    <h2 style="text-align:center">About me</h2>
+    <div class="card">
+      <img src="/images/me.jpg" alt="John" style="width:100%">
+      <h1>John Doe</h1>
+      <p class="title">CEO & Founder, Example</p>
+      <p>Harvard University</p>
+        <div style="margin: 24px 0;">
+         <a href="#"><i class="fa fa-dribbble"></i></a> 
+         <a href="#"><i class="fa fa-twitter"></i></a>  
+         <a href="#"><i class="fa fa-linkedin"></i></a>  
+         <a href="#"><i class="fa fa-facebook"></i></a> 
+       </div>
+        <p><button>Contact</button></p>
+     </div>
   <div class="main">
     <h2>TITLE HEADING</h2>
     <h5>Title description, Dec 7, 2017</h5>
