--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ button:hover, a:hover {
   <div class="side">
     <h2 style="text-align:center">About me</h2>
     <div class="card">
-      <img src="/images/me.jpg" alt="John" style="width:100%">
+      <img src="/images/me.png" alt="Andy" style="width:100%">
       <h1>John Doe</h1>
       <p class="title">CEO & Founder, Example</p>
       <p>Harvard University</p>
