--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@ button:hover, a:hover {
     <h2 style="text-align:center">About me</h2>
     <div class="card">
       <img src="/images/me.png" alt="Andy" style="width:100%">
-      <h1>John Doe</h1>
-      <p class="title">CEO & Founder, Example</p>
-      <p>Harvard University</p>
+      <h1>Andy Ge</h1>
+      <p class="title">CEO & Founder, Developer, Artist</p>
+      <p>Fantasy University</p>
         <div style="margin: 24px 0;">
          <a href="#"><i class="fa fa-dribbble"></i></a> 
          <a href="#"><i class="fa fa-twitter"></i></a>  
