--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <base href="https://andyw4ndgerannt.github.io/docs/">
 <head>
   <title>TechDocs</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
 * {box-sizing: border-box;}
@@ -202,9 +202,9 @@ button:hover, a:hover {
 <div class="header">
   <a href="#default" class="logo">CompanyLogo</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a class="active" href="./">Home</a>
+    <a href="./templates/contact.html">Contact</a>
+    <a href="./templates/about.html">About</a>
   </div>
 </div>
   
@@ -229,7 +229,7 @@ button:hover, a:hover {
   <div class="side">
     <h2 style="text-align:center">About me</h2>
     <div class="card">
-      <img src="/images/me.png" alt="Andy" style="width:100%">
+      <img src="./images/me.png" alt="Andy" style="width:100%">
       <h1>Andy Ge</h1>
       <p class="title">CEO & Founder, Developer, Artist</p>
       <p>Fantasy University</p>
