--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@ button:hover, a:hover {
   <div class="side">
     <h2 style="text-align:center">About me</h2>
     <div class="card">
-      <img src="./images/me.png" alt="Andy" style="width:100%">
+      <div class="cardimg">
+        <img src="./images/me.png" alt="Andy" style="width:100%">
+      </div>  
       <h1>Andy Ge</h1>
       <p class="title">CEO & Founder, Developer, Artist</p>
       <p>Fantasy University</p>
