--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@ body {
     padding: 20px;
   }
   /* Footer */
-  .footer {
-    padding: 20px;
-    bottom: 0;
-    text-align: center;
-    background: #ddd;
-  }
+.footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
   /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 700px) {
     .row, .navbar {   
