--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ button:hover, a:hover {
   
 <!-- Header --> 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="https://andyw4ndgerannt.github.io/docs/" class="logo">CompanyLogo</a>
   <div class="header-right">
-    <a class="active" href="./">Home</a>
+    <a class="active" href="https://andyw4ndgerannt.github.io/docs/">Home</a>
     <a href="./templates/contact.html">Contact</a>
     <a href="./templates/about.html">About</a>
   </div>
