--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@ function closeNav() {
 }
 </script>
 
+<footer>
+  <p>Author: Andreas Gerlich<br>
+  <a href="mailto:gerlich96@gmx.de">gerlich96@gmx.de</a></p>
+</footer>
+  
 </body>
 </html>
 
