--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@ body {
     padding: 20px;
   }
   /* Footer */
-.footer {
-  text-align: center;
-  padding: 3px;
-  background-color: DarkSalmon;
-  color: white;
-}
+  .footer {
+    text-align: center;
+    felx: 70%;
+    background-color: DarkSalmon;
+    color: white;
+    padding: 20px;
+  }
   /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 700px) {
     .row, .navbar {   
