--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ button:hover, a:hover {
        </div>
         <p><button>Contact</button></p>
      </div>
+    </div>
   <div class="main">
     <h2>TITLE HEADING</h2>
     <h5>Title description, Dec 7, 2017</h5>
