--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ button:hover, a:hover {
   <a href="https://andyw4ndgerannt.github.io/docs/" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="https://andyw4ndgerannt.github.io/docs/">Home</a>
-    <a href="./templates/contact.html">Contact</a>
-    <a href="./templates/about.html">About</a>
+    <a href="https://andyw4ndgerannt.github.io/docs/templates/contact.html">Contact</a>
+    <a href="https://andyw4ndgerannt.github.io/docs/templates/about.html">About</a>
   </div>
 </div>
   
@@ -214,11 +214,11 @@ button:hover, a:hover {
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="./">Home</a> |
-  <a href="./templates/team.html/">Team</a> |
+  <a href="./templates/team.html">Team</a> |
   <a href="./templates/products.html">Products</a> |
-  <a href="./templates/wiki.html/">Wiki</a> |
+  <a href="./templates/wiki.html">Wiki</a> |
   <a href="./templates/style.html">Style</a> |
-  <a href="./templates/about.html/">About us</a>
+  <a href="./templates/about.html">About us</a>
 </div>
 <div id="main">
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
