--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ button:hover, a:hover {
   <a href="./templates/about.html">About us</a>
 </div>
 <div id="main">
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Navigation</span>
 </div>
 
   
