--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@ button:hover, a:hover {
   <a href="./">Home</a> |
   <a href="./templates/team.html">Team</a> |
   <a href="./templates/products.html">Products</a> |
+  <a href="./templates/animation.html">Animation</a> |
   <a href="./templates/wiki.html">Wiki</a> |
   <a href="./templates/style.html">Style</a> |
   <a href="./templates/about.html">About us</a>
