--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ button:hover, a:hover {
          <a href="#"><i class="fa fa-dribbble"></i></a> 
          <a href="#"><i class="fa fa-twitter"></i></a>  
          <a href="#"><i class="fa fa-linkedin"></i></a>  
-         <a href="#"><i class="fa fa-facebook"></i></a> 
+         <a href="https://www.facebook.com/MKCreativeHomeDesign"><i class="fa fa-facebook"></i></a> 
        </div>
         <p><button>Contact</button></p>
      </div>
