--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ button:hover, a:hover {
   <a href="./templates/products.html">Products</a> |
   <a href="./templates/animation.html">Animation</a> |
   <a href="./templates/wiki.html">Wiki</a> |
-  <a href="./templates/style.html">Style</a> |
+  <a href="./templates/style.html">Fraktale</a> |
   <a href="./templates/about.html">About us</a>
 </div>
 <div id="main">
